<resources>
    <string name="title_activity_quiz">Quiz</string>
    <string name="title_activity_review">Review</string>
    <string name="button_start">Quiz</string>
    <string name="button_review">Review</string>
    <string name="empty_question">Question?</string>
    <string name="ok">OK</string>
    <string name="next_question">Continue</string>
    <string name="hint">Hint</string>
    <string name="empty_answer">Answer</string>
    <string name="summary_title">Results</string>
    <string name="summary"><![CDATA[Correct answers: %1$d<br/></br>Incorrect answers: %2$d]]></string>
    <string name="correct">Correct</string>
    <string name="sections">Sections</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
</resources>